--- a/Data_Analysis/DataScience-Python/Desafio1.ipynb
+++ b/Data_Analysis/DataScience-Python/Desafio1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "1b95132c-199c-49ca-94b2-4ddfa19daae6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "a 16\n",
       "c 3\n",
-      "d 7\n",
+      "d 10\n",
       "e 11\n",
       "i 4\n",
       "m 3\n",
@@ -22,18 +22,21 @@
       "r 6\n",
       "s 12\n",
       "t 4\n",
-      "u 2\n",
+      "u 3\n",
       "v 2\n",
       "z 2\n",
-      "Quantidade total de letras da frase : 130 \n",
-      "Total de letra que se repetem : 15 \n"
+      "á 2\n",
+      "ç 3\n",
+      "Quantidade total de letras da frase : 108 \n",
+      "Total de letras que se repetem : 17 \n"
      ]
     }
    ],
    "source": [
-    "alfabeto_validacao = \"abcdefghijklmnopqrstuvwxyz\"\n",
-    "texto =  \"Um forte indicador de que já há avanços de Democratização de Dados nas organizações é observar quantas pessoas tem acesso a Dados.\"\n",
-    "quantidadeTotalLetras = len(texto)\n",
+    "alfabeto_validacao = \"abcdefghijklmnopqrstuvwxyzáàâãéèêíïóôõöúçñ\"\n",
+    "texto =\"Um forte indicador de que já há avanços de Democratização de Dados nas organizações é observar quantas pessoas tem acesso a Dados.\".lower()\n",
+    "\n",
+    "quantidadeTotalLetras = len(texto) - texto.count('.') - texto.count(' ')\n",
     "quantidadeTotalLetrasRepetidas = 0\n",
     "for letra in alfabeto_validacao:\n",
     "  quantidade = texto.count(letra)\n",
@@ -41,13 +44,21 @@
     "    quantidadeTotalLetrasRepetidas = quantidadeTotalLetrasRepetidas +1\n",
     "    print (letra, quantidade)\n",
     "print(f'Quantidade total de letras da frase : {quantidadeTotalLetras} ')\n",
-    "print(f'Total de letra que se repetem : {quantidadeTotalLetrasRepetidas} ')"
+    "print(f'Total de letras que se repetem : {quantidadeTotalLetrasRepetidas} ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d06980-5f15-4a8e-be52-69f0ec59a771",
+   "id": "53725435-f4b7-41fa-b6c1-ab94e5ed2480",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4261d272-7cdd-4123-94e5-43b510978299",
    "metadata": {},
    "outputs": [],
    "source": []
